crates/aranya-policy-compiler/tests/data/type_errors/dot_on_non_struct_invalid_type_1.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
2 |     return x.y
  |            ^ expected `struct T` but found `int`
